--- a/organisasi.html
+++ b/organisasi.html
@@ -63,10 +63,10 @@
         <img src="img/gtv.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="200">
-        <img src="img/css.jpg" alt="Kegiatan Pelantikan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
+        <img src="img/css.JPG" alt="Kegiatan Pelantikan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="200">
-        <img src="img/ex.JPG" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
+        <img src="img/ex.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="200">
         <img src="img/ppab.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
