--- a/organisasi.html
+++ b/organisasi.html
@@ -45,16 +45,16 @@
       
       <!-- Gambar nyata -->
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in">
-        <img src="img/ceeses.jpg" alt="Kegiatan Ceeses" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
+        <img src="img/ceeses.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="100">
-        <img src="img/litbang.jpg" alt="Kegiatan Litbang" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
+        <img src="img/litbang.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="200">
-        <img src="img/pelantikan.jpg" alt="Kegiatan Pelantikan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
+        <img src="img/pelantikan.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="200">
-        <img src="img/c.jpg" alt="Kegiatan C" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
+        <img src="img/c.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
       </div>
       <div class="overflow-hidden rounded-lg shadow-lg" data-aos="zoom-in" data-aos-delay="200">
         <img src="img/ami.jpg" alt="Kegiatan" class="w-full h-56 object-cover hover:scale-105 transition-transform duration-300" />
